[package]
name = "xuxiaowei-tools"
version = "0.0.1"
description = "基于 Vite 3、Vue 3、Element Plus 的工具箱"
authors = ["徐晓伟 <xuxiaowei@xuxiaowei.com.cn>"]
license = "Apache-2.0"
repository = "git+https://github.com/xuxiaowei-com-cn/xuxiaowei-tools.git"
default-run = "xuxiaowei-tools"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.4", features = ["api-all"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
